Updated index.html styles.css scripts.js

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body class="dark">
   <nav class="nav">
     <div class="brand">Lokeshkumar D<span class="dot">.</span></div>
+   <button class="mobile-toggle" id="mobileToggle" aria-label="Menu">
+  ☰
+</button>
     <div class="nav-links desktop-nav">
       <a href="#home">Home</a>
       <a href="#about">About</a>
@@ -24,8 +27,7 @@
     </div>
 		<!-- Mobile controls -->
 	  <div class="mobile-controls">
-		<button id="mobileThemeToggle" class="theme-toggle">🌙</button>
-		<button id="menuToggle" class="menu-toggle">☰</button>
+		<button id="mobileThemeToggle" class="theme-toggle">🌙</button>		
 	  </div>
   </nav>
 	
