Updated index.html styles.css scripts.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="dark">
   <nav class="nav">
     <div class="brand">Lokeshkumar D<span class="dot">.</span></div>
-   <button class="mobile-toggle" id="mobileToggle" aria-label="Menu">
+   <button class="nav-toggle" id="navToggle" aria-label="Menu">
   ☰
 </button>
     <div class="nav-links desktop-nav">
